[gd_scene load_steps=5 format=2]

[ext_resource path="res://ControlsMenu.gd" type="Script" id=1]
[ext_resource path="res://theme_test.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/ControlsOverlay/mouse_leftbutton.png" type="Texture" id=3]
[ext_resource path="res://Sprites/ControlsOverlay/mous_movementsprite.png" type="Texture" id=4]

[node name="ControlsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.25561
margin_top = 3.77551
margin_right = -1.25568
margin_bottom = 3.77551
color = Color( 0.341176, 0.333333, 0.333333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/Panel"]
anchor_right = 1.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Panel/CenterContainer"]
margin_left = 155.0
margin_top = 50.0
margin_right = 355.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 100 )
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/Panel/CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 15.0

[node name="Label" type="Label" parent="ColorRect/Panel/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_right = 39.0
margin_bottom = 15.0
text = "Shoot"

[node name="Sprite" type="Sprite" parent="ColorRect/Panel/CenterContainer/VBoxContainer/HBoxContainer2"]
position = Vector2( 59.3738, 7.40203 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/Panel/CenterContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 200.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="ColorRect/Panel/CenterContainer/VBoxContainer/HBoxContainer3"]
margin_right = 19.0
margin_bottom = 15.0
text = "AIM"

[node name="Sprite" type="Sprite" parent="ColorRect/Panel/CenterContainer/VBoxContainer/HBoxContainer3"]
position = Vector2( 61.6187, 11.8919 )
texture = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
margin_left = 108.332
margin_top = 231.11
margin_right = 512.332
margin_bottom = 281.11
rect_min_size = Vector2( 50, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsMenuBackButton" type="Button" parent="ColorRect/HBoxContainer"]
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )

[node name="Label" type="Label" parent="ColorRect/HBoxContainer/ControlsMenuBackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.25989
margin_bottom = 1.25989
rect_min_size = Vector2( 100, 50 )
text = "back"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsMenuSaveButton" type="Button" parent="ColorRect/HBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )

[node name="Label" type="Label" parent="ColorRect/HBoxContainer/ControlsMenuSaveButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "save"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsMenuResetButton" type="Button" parent="ColorRect/HBoxContainer"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )

[node name="Label" type="Label" parent="ColorRect/HBoxContainer/ControlsMenuResetButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Reset"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ColorRect/HBoxContainer/ControlsMenuBackButton" to="." method="_on_ControlsMenuBackButton_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/ControlsMenuSaveButton" to="." method="_on_ControlsMenuSaveButton_pressed"]
